2006-05-08  Stipe Tolj  <stolj at kannel.org>
  * Makefile.in: adding installing of all .h and .def files in the install 
    target, including the gw directory. This is required if external modules
    implementing own functionality will use gwlib and gw functions that are
    installed to the system.

2006-05-05  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_smpp.c: fixed #337. We must set RECONNECT status on connection
    before we put local queued messages into global queue.
    Thanks to <pch at coolsystems.dk> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gwlib/list.h: added example to the comment how to use gwlist_sort function.
    Thanks to Wilfried Goesgens <w.goesgens at chaosindustries.de> for patch.

2006-04-28  Alexander Malysh <amalysh at kannel.org>
  * gw/smsbox.c: fixed memory leak.
    Thanks to Rafael <rafael at atgcaribbean.com> for patch.
    [Msg-Id: <44510365.8070000@atgcaribbean.com>]

2006-04-24 Andreas Fink <andreas@fink.org>
  * gw/smsc/smsc_at.c, gw/msg.h, gw/smsbox.c, gw/urltrans.c
    added new parameter %f to show the SMSC number from which an incoming sms
    is arriving. Only valid for AT.

2006-04-19  Alexander Malysh <amalysh at kannel.org>
  * gw/smsc/smsc_http.c: We need to refresh the connect time when status
    is changing to SMSCCONN_ACTIVE otherwise connect time has no sense.
    Thanks to Vincent Chavanis <vincent at telemaque.fr> for provided patch.
    [Msg-Id: <0eda01c66398$5bc7fe10$9600a8c0@vince>]

2006-04-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smscconn.c: fix for prev. patch that throughput was not set.
    Thanks to Vincent Chavanis <vincent at telemaque.fr> for pointing to this.

2006-04-07  Alexander Malysh <amalysh at kannel.org>
  * gw/smscconn.c, gw/smscconn_p.h, gw/smsc/smsc_emi.c, gw/smsc/smsc_fake.c,
    gw/smsc/smsc_http.c, gw/smsc/smsc_smasi.c, gw/smsc/smsc_smpp.c: applied patch
    that changes throughput from integer to double for more precise throughput